k8s/chat/chat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    io.kompose.service: chat
  name: chat
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: chat
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        io.kompose.service: chat
    spec:
      imagePullSecrets:
      - name: ghcr
      containers:
        - image: ghcr.io/utrechtuniversity/numworx-dwo-setup/prosody
          name: chat
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
          - name: chat-config
            mountPath: /etc/prosody/conf.d
      volumes:
        - name: chat-config
          configMap:
            name: chat-config
      restartPolicy: Always
status: {}
